# typeslate-terminal

./: .gitignore  README.md  pyproject.toml
typeslate_terminal/: __init__.py  __main__.py  app.py  database.py
